crates/java-syntax/tests/snapshots/parser_snapshots__parse_multiline_class.snap
---
source: crates/java-syntax/tests/parser_snapshots.rs
expression: out
---
SOURCE:
class A {
    int x;
    void f() {}
}

TOKENS:
CLASS_KW "class"
WHITESPACE " "
IDENTIFIER "A"
WHITESPACE " "
L_BRACE "{"
WHITESPACE "\n    "
INT_KW "int"
WHITESPACE " "
IDENTIFIER "x"
SEMICOLON ";"
WHITESPACE "\n    "
VOID_KW "void"
WHITESPACE " "
IDENTIFIER "f"
L_PAREN "("
R_PAREN ")"
WHITESPACE " "
L_BRACE "{"
R_BRACE "}"
WHITESPACE "\n"
R_BRACE "}"
WHITESPACE "\n"
EOF ""

LEX_ERRORS:
<none>

SYNTAX_TREE:
ROOT@0..39
  CLASS_DECL@0..38
    CLASS_KW@0..5 "class"
    WHITESPACE@5..6 " "
    IDENTIFIER@6..7 "A"
    WHITESPACE@7..8 " "
    CLASS_BODY@8..38
      L_BRACE@8..9 "{"
      WHITESPACE@9..14 "\n    "
      FIELD_DECL@14..20
        TYPE@14..17
          INT_KW@14..17 "int"
        WHITESPACE@17..18 " "
        VARIABLE_DECLARATOR_LIST@18..19
          VARIABLE_DECLARATOR@18..19
            IDENTIFIER@18..19 "x"
        SEMICOLON@19..20 ";"
      WHITESPACE@20..25 "\n    "
      METHOD_DECL@25..36
        VOID_KW@25..29 "void"
        WHITESPACE@29..30 " "
        IDENTIFIER@30..31 "f"
        FORMAL_PARAMETERS@31..33
          L_PAREN@31..32 "("
          R_PAREN@32..33 ")"
        WHITESPACE@33..34 " "
        BLOCK@34..36
          L_BRACE@34..35 "{"
          R_BRACE@35..36 "}"
      WHITESPACE@36..37 "\n"
      R_BRACE@37..38 "}"
  WHITESPACE@38..39 "\n"
