crates/java-syntax/tests/snapshots/parser_snapshots__parse_multiple_exceptions_in_throws_clause.snap
---
source: crates/java-syntax/tests/parser_snapshots.rs
expression: out
---
SOURCE:
class Test {
    void func() throws IOException, ArrayIndexOutOfBoundsException {}
}

TOKENS:
CLASS_KW "class"
WHITESPACE " "
IDENTIFIER "Test"
WHITESPACE " "
L_BRACE "{"
WHITESPACE "\n    "
VOID_KW "void"
WHITESPACE " "
IDENTIFIER "func"
L_PAREN "("
R_PAREN ")"
WHITESPACE " "
THROWS_KW "throws"
WHITESPACE " "
IDENTIFIER "IOException"
COMMA ","
WHITESPACE " "
IDENTIFIER "ArrayIndexOutOfBoundsException"
WHITESPACE " "
L_BRACE "{"
R_BRACE "}"
WHITESPACE "\n"
R_BRACE "}"
WHITESPACE "\n"
EOF ""

LEX_ERRORS:
<none>

SYNTAX_TREE:
ROOT@0..85
  CLASS_DECL@0..84
    CLASS_KW@0..5 "class"
    WHITESPACE@5..6 " "
    IDENTIFIER@6..10 "Test"
    WHITESPACE@10..11 " "
    CLASS_BODY@11..84
      L_BRACE@11..12 "{"
      WHITESPACE@12..17 "\n    "
      METHOD_DECL@17..82
        VOID_KW@17..21 "void"
        WHITESPACE@21..22 " "
        IDENTIFIER@22..26 "func"
        FORMAL_PARAMETERS@26..28
          L_PAREN@26..27 "("
          R_PAREN@27..28 ")"
        WHITESPACE@28..29 " "
        THROWS_CLAUSE@29..79
          THROWS_KW@29..35 "throws"
          WHITESPACE@35..36 " "
          TYPE@36..47
            QUALIFIED_NAME@36..47
              IDENTIFIER@36..47 "IOException"
          COMMA@47..48 ","
          WHITESPACE@48..49 " "
          TYPE@49..79
            QUALIFIED_NAME@49..79
              IDENTIFIER@49..79 "ArrayIndexOutOfBounds ..."
        WHITESPACE@79..80 " "
        BLOCK@80..82
          L_BRACE@80..81 "{"
          R_BRACE@81..82 "}"
      WHITESPACE@82..83 "\n"
      R_BRACE@83..84 "}"
  WHITESPACE@84..85 "\n"
