crates/java-syntax/tests/snapshots/parser_snapshots__parse_nested_wildcard_type_argument.snap
---
source: crates/java-syntax/tests/parser_snapshots.rs
expression: out
---
SOURCE:
class A { Map<String, List<? extends Number>> xs; }
TOKENS:
CLASS_KW "class"
WHITESPACE " "
IDENTIFIER "A"
WHITESPACE " "
L_BRACE "{"
WHITESPACE " "
IDENTIFIER "Map"
LESS "<"
IDENTIFIER "String"
COMMA ","
WHITESPACE " "
IDENTIFIER "List"
LESS "<"
QUESTION "?"
WHITESPACE " "
EXTENDS_KW "extends"
WHITESPACE " "
IDENTIFIER "Number"
RIGHT_SHIFT ">>"
WHITESPACE " "
IDENTIFIER "xs"
SEMICOLON ";"
WHITESPACE " "
R_BRACE "}"
EOF ""

LEX_ERRORS:
<none>

SYNTAX_TREE:
ROOT@0..51
  CLASS_DECL@0..51
    CLASS_KW@0..5 "class"
    WHITESPACE@5..6 " "
    IDENTIFIER@6..7 "A"
    WHITESPACE@7..8 " "
    CLASS_BODY@8..51
      L_BRACE@8..9 "{"
      WHITESPACE@9..10 " "
      FIELD_DECL@10..49
        TYPE@10..45
          QUALIFIED_NAME@10..13
            IDENTIFIER@10..13 "Map"
          TYPE_ARGUMENTS@13..45
            LESS@13..14 "<"
            TYPE_ARGUMENT@14..20
              TYPE@14..20
                QUALIFIED_NAME@14..20
                  IDENTIFIER@14..20 "String"
            COMMA@20..21 ","
            WHITESPACE@21..22 " "
            TYPE_ARGUMENT@22..44
              TYPE@22..44
                QUALIFIED_NAME@22..26
                  IDENTIFIER@22..26 "List"
                TYPE_ARGUMENTS@26..44
                  LESS@26..27 "<"
                  TYPE_ARGUMENT@27..43
                    WILDCARD_TYPE@27..43
                      QUESTION@27..28 "?"
                      WHITESPACE@28..29 " "
                      WILDCARD_BOUNDS@29..43
                        EXTENDS_KW@29..36 "extends"
                        WHITESPACE@36..37 " "
                        TYPE@37..43
                          QUALIFIED_NAME@37..43
                            IDENTIFIER@37..43 "Number"
                  RIGHT_SHIFT@43..44 ">"
            GREATER@44..45 ">"
        WHITESPACE@45..46 " "
        VARIABLE_DECLARATOR_LIST@46..48
          VARIABLE_DECLARATOR@46..48
            IDENTIFIER@46..48 "xs"
        SEMICOLON@48..49 ";"
      WHITESPACE@49..50 " "
      R_BRACE@50..51 "}"
