crates/java-syntax/tests/snapshots/parser_snapshots__parse_package_decl.snap
---
source: crates/java-syntax/tests/parser_snapshots.rs
expression: out
---
SOURCE:
package a.b;
TOKENS:
PACKAGE_KW "package"
WHITESPACE " "
IDENTIFIER "a"
DOT "."
IDENTIFIER "b"
SEMICOLON ";"
EOF ""

LEX_ERRORS:
<none>

SYNTAX_TREE:
ROOT@0..12
  PACKAGE_DECL@0..12
    PACKAGE_KW@0..7 "package"
    WHITESPACE@7..8 " "
    QUALIFIED_NAME@8..11
      IDENTIFIER@8..9 "a"
      DOT@9..10 "."
      IDENTIFIER@10..11 "b"
    SEMICOLON@11..12 ";"
