crates/java-syntax/tests/snapshots/parser_snapshots__parse_package_modifier.snap
---
source: crates/java-syntax/tests/parser_snapshots.rs
expression: out
---
SOURCE:
@Annotation package com.example;

TOKENS:
AT "@"
IDENTIFIER "Annotation"
WHITESPACE " "
PACKAGE_KW "package"
WHITESPACE " "
IDENTIFIER "com"
DOT "."
IDENTIFIER "example"
SEMICOLON ";"
WHITESPACE "\n"
EOF ""

LEX_ERRORS:
<none>

SYNTAX_TREE:
ROOT@0..33
  MODIFIER_LIST@0..11
    MARKER_ANNOTATION@0..11
      AT@0..1 "@"
      QUALIFIED_NAME@1..11
        IDENTIFIER@1..11 "Annotation"
  PACKAGE_DECL@11..32
    WHITESPACE@11..12 " "
    PACKAGE_KW@12..19 "package"
    QUALIFIED_NAME@19..31
      WHITESPACE@19..20 " "
      IDENTIFIER@20..23 "com"
      DOT@23..24 "."
      IDENTIFIER@24..31 "example"
    SEMICOLON@31..32 ";"
  WHITESPACE@32..33 "\n"
