crates/java-syntax/tests/snapshots/parser_snapshots__parse_prefix_expr.snap
---
source: crates/java-syntax/tests/parser_snapshots.rs
expression: out
---
SOURCE:
class Test {
    void test() {
        ++i;
        --i;
    }
}

TOKENS:
CLASS_KW "class"
WHITESPACE " "
IDENTIFIER "Test"
WHITESPACE " "
L_BRACE "{"
WHITESPACE "\n    "
VOID_KW "void"
WHITESPACE " "
IDENTIFIER "test"
L_PAREN "("
R_PAREN ")"
WHITESPACE " "
L_BRACE "{"
WHITESPACE "\n        "
PLUS_PLUS "++"
IDENTIFIER "i"
SEMICOLON ";"
WHITESPACE "\n        "
MINUS_MINUS "--"
IDENTIFIER "i"
SEMICOLON ";"
WHITESPACE "\n    "
R_BRACE "}"
WHITESPACE "\n"
R_BRACE "}"
WHITESPACE "\n"
EOF ""

LEX_ERRORS:
<none>

SYNTAX_TREE:
ROOT@0..65
  CLASS_DECL@0..64
    CLASS_KW@0..5 "class"
    WHITESPACE@5..6 " "
    IDENTIFIER@6..10 "Test"
    WHITESPACE@10..11 " "
    CLASS_BODY@11..64
      L_BRACE@11..12 "{"
      WHITESPACE@12..17 "\n    "
      METHOD_DECL@17..62
        VOID_KW@17..21 "void"
        WHITESPACE@21..22 " "
        IDENTIFIER@22..26 "test"
        FORMAL_PARAMETERS@26..28
          L_PAREN@26..27 "("
          R_PAREN@27..28 ")"
        WHITESPACE@28..29 " "
        BLOCK@29..62
          L_BRACE@29..30 "{"
          WHITESPACE@30..39 "\n        "
          EXPRESSION_STMT@39..43
            PREFIX_EXPR@39..42
              PLUS_PLUS@39..41 "++"
              LITERAL@41..42
                IDENTIFIER@41..42 "i"
            SEMICOLON@42..43 ";"
          WHITESPACE@43..52 "\n        "
          EXPRESSION_STMT@52..56
            PREFIX_EXPR@52..55
              MINUS_MINUS@52..54 "--"
              LITERAL@54..55
                IDENTIFIER@54..55 "i"
            SEMICOLON@55..56 ";"
          WHITESPACE@56..61 "\n    "
          R_BRACE@61..62 "}"
      WHITESPACE@62..63 "\n"
      R_BRACE@63..64 "}"
  WHITESPACE@64..65 "\n"
