crates/java-syntax/tests/snapshots/parser_snapshots__parse_primitive_array_type_argument.snap
---
source: crates/java-syntax/tests/parser_snapshots.rs
expression: out
---
SOURCE:
class Test {
    static final Pool<byte[]> POOL = new Pool<>(() -> new byte[8]);
}

TOKENS:
CLASS_KW "class"
WHITESPACE " "
IDENTIFIER "Test"
WHITESPACE " "
L_BRACE "{"
WHITESPACE "\n    "
STATIC_KW "static"
WHITESPACE " "
FINAL_KW "final"
WHITESPACE " "
IDENTIFIER "Pool"
LESS "<"
BYTE_KW "byte"
L_BRACKET "["
R_BRACKET "]"
GREATER ">"
WHITESPACE " "
IDENTIFIER "POOL"
WHITESPACE " "
EQUAL "="
WHITESPACE " "
NEW_KW "new"
WHITESPACE " "
IDENTIFIER "Pool"
LESS "<"
GREATER ">"
L_PAREN "("
L_PAREN "("
R_PAREN ")"
WHITESPACE " "
ARROW "->"
WHITESPACE " "
NEW_KW "new"
WHITESPACE " "
BYTE_KW "byte"
L_BRACKET "["
INTEGER_LITERAL "8"
R_BRACKET "]"
R_PAREN ")"
SEMICOLON ";"
WHITESPACE "\n"
R_BRACE "}"
WHITESPACE "\n"
EOF ""

LEX_ERRORS:
<none>

SYNTAX_TREE:
ROOT@0..83
  CLASS_DECL@0..82
    CLASS_KW@0..5 "class"
    WHITESPACE@5..6 " "
    IDENTIFIER@6..10 "Test"
    CLASS_BODY@10..82
      WHITESPACE@10..11 " "
      L_BRACE@11..12 "{"
      FIELD_DECL@12..80
        WHITESPACE@12..17 "\n    "
        MODIFIER_LIST@17..29
          STATIC_KW@17..23 "static"
          WHITESPACE@23..24 " "
          FINAL_KW@24..29 "final"
        TYPE@29..42
          WHITESPACE@29..30 " "
          QUALIFIED_NAME@30..34
            IDENTIFIER@30..34 "Pool"
          TYPE_ARGUMENTS@34..42
            LESS@34..35 "<"
            TYPE_ARGUMENT@35..41
              TYPE@35..41
                BYTE_KW@35..39 "byte"
                DIMENSIONS@39..41
                  DIMENSION@39..41
                    L_BRACKET@39..40 "["
                    R_BRACKET@40..41 "]"
            GREATER@41..42 ">"
        VARIABLE_DECLARATOR_LIST@42..79
          WHITESPACE@42..43 " "
          VARIABLE_DECLARATOR@43..79
            IDENTIFIER@43..47 "POOL"
            WHITESPACE@47..48 " "
            EQUAL@48..49 "="
            NEW_EXPR@49..79
              WHITESPACE@49..50 " "
              NEW_KW@50..53 "new"
              QUALIFIED_NAME@53..58
                WHITESPACE@53..54 " "
                IDENTIFIER@54..58 "Pool"
              TYPE_ARGUMENTS@58..60
                LESS@58..59 "<"
                GREATER@59..60 ">"
              ARGUMENT_LIST@60..79
                L_PAREN@60..61 "("
                LAMBDA_EXPR@61..78
                  INFERRED_PARAMETERS@61..63
                    L_PAREN@61..62 "("
                    R_PAREN@62..63 ")"
                  WHITESPACE@63..64 " "
                  ARROW@64..66 "->"
                  NEW_EXPR@66..78
                    WHITESPACE@66..67 " "
                    NEW_KW@67..70 "new"
                    WHITESPACE@70..71 " "
                    BYTE_KW@71..75 "byte"
                    DIMENSIONS@75..78
                      DIMENSION@75..78
                        L_BRACKET@75..76 "["
                        LITERAL@76..77
                          INTEGER_LITERAL@76..77 "8"
                        R_BRACKET@77..78 "]"
                R_PAREN@78..79 ")"
        SEMICOLON@79..80 ";"
      WHITESPACE@80..81 "\n"
      R_BRACE@81..82 "}"
  WHITESPACE@82..83 "\n"
